# boxtools2

./: pyproject.toml
src/boxtools.egg-info/: PKG-INFO
