[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boxtools"
version = "2.1.0"
authors = [{ name="thatboii", email="thatboii@altmails.com" },]
license.text = "AGPL-3.0-or-later"
description = "A package meant to import useful packages (currently a placeholder)"
readme = "readme.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/thatboii32/boxtools2"
"Bug Tracker" = "https://github.com/thatboii32/boxtools2/issues"